# noparama

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.rst  README_8md.html  annotated.html  classCluster-members.html  classCluster.html  classInitClusters-members.html  classInitClusters.html  classJainNealAlgorithm-members.html  classJainNealAlgorithm.html  classJainNealAlgorithm__coll__graph.map  classJainNealAlgorithm__coll__graph.md5  classJainNealAlgorithm__inherit__graph.md5  classLikelihood-members.html  classLikelihood.html  classMCMC-members.html  classMCMC.html  classNealAlgorithm2-members.html  classNealAlgorithm2.html  classNealAlgorithm2__coll__graph.map  classNealAlgorithm2__coll__graph.md5  classNealAlgorithm2__inherit__graph.md5  classNealAlgorithm8-members.html  classNealAlgorithm8.html  classNealAlgorithm8__coll__graph.map  classNealAlgorithm8__coll__graph.md5  classNealAlgorithm8__inherit__graph.md5  classPosteriorPredictive-members.html  classPosteriorPredictive.html  classResults-members.html  classResults.html  classSufficientStatistics.html  classSufficientStatistics__MultivariateNormal-members.html  classSufficientStatistics__MultivariateNormal.html  classSufficientStatistics__MultivariateNormal__coll__graph.map  classSufficientStatistics__MultivariateNormal__coll__graph.md5  (+401 more)
conf/: CMakeLists.txt
conf/modules/: compile_header_commands.cmake
conf/test/: CMakeLists.txt
include/: clustering_performance.h  common.h  membertrix  membertrix.h  np_cluster.h  np_data.h  np_init_clusters.h  np_jain_neal_algorithm.h  np_likelihood.h  np_mcmc.h  np_neal_algorithm2.h  np_neal_algorithm8.h  np_posterior_predictive.h  np_results.h  np_sample_pdf.h  np_statistics.h  np_sufficient_statistics.h  np_suffies.h  np_triadic_algorithm.h  np_update_cluster_population.h  np_update_clusters.h  pretty_print.hpp
include/data-driven/: emd_meanshift.h  nearest_compare.h  set_compare.h
include/helper/: dim1algebra.hpp
include/inference/: gibbs_damlen_auxiliary_vars.h
include/statistics/: dirichlet.h  distribution.h  gamma.h  invwishart.h  multivariatenormal.h  multivariatenormal_rnd.h  normal.h  normalinvgamma.h  normalinvwishart.h  normalinvwishart_rnd.h  scalarnoise_multivariatenormal.h
plot/: test_dirichlet.plot  test_multivariate_normal_distribution.plot
scripts/: README.rst  analyze-three.m  analyze.m  collect.sh  generate.m  plot.sh  run_all.sh  visualize.R  visualize.m  visualize_input.R  visualize_single_fit.R
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+64 more)
src/: clustering_performance.cpp  membertrix.cpp  np_init_clusters.cpp  np_jain_neal_algorithm.cpp  np_main.cpp  np_mcmc.cpp  np_neal_algorithm2.cpp  np_neal_algorithm8.cpp  np_results.cpp  np_suffies.cpp  np_triadic_algorithm.cpp  np_update_cluster_population.cpp  np_update_clusters.cpp
src/data-driven/: emd_meanshift.cpp  nearest_compare.cpp  set_compare.cpp
src/statistics/: multivariatenormal.cpp  scalarnoise_multivariatenormal.cpp
test/: CMakeLists.txt  test_dirichlet.cpp  test_membertrix.cpp  test_multivariate_normal_distribution.cpp  test_mvn_likelihood.cpp  test_weighted_vector.cpp
